--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -28,43 +28,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import IPython.display as ipd\n",
+    "from network.branched_network_class import branched_network\n",
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "import scipy.io.wavfile as wav\n",
+    "# %pylab inline\n",
+    "import librosa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
+      "fheee\n"
      ]
     }
    ],
    "source": [
-    "import IPython.display as ipd\n",
-    "import sys\n",
-    "sys.path.append('./network/')\n",
-    "from branched_network_class import branched_network\n",
-    "import tensorflow as tf\n",
-    "import scipy.io.wavfile as wav\n",
-    "import matplotlib as plt \n",
-    "%pylab inline\n",
-    "import librosa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# import the following to run demo_from_wav()\n",
-    "import pyco.cochleagram as cgram\n",
+    "import cochleagram as cgram\n",
     "from PIL import Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,44 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "global name 'tf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-51f644bf698e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mprint\u001b[0m \u001b[0;34m\"Speech Example ... \\n clean speech, actual label: Cheese, predicted_label: \"\u001b[0m         \u001b[0;34m+\u001b[0m \u001b[0mprediction\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mdemo_from_wav\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./data/cantonese/cantonese1/also.wav'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-1-51f644bf698e>\u001b[0m in \u001b[0;36mdemo_from_wav\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdemo_from_wav\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset_default_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mnet_object\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbranched_network\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mword_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./demo_stim/logits_to_word_key.npy'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# load logits to word key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mmusic_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./demo_stim/logits_to_genre_key.npy'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# load logits to word key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: global name 'tf' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "def demo_from_wav(filename):\n",
-    "    tf.reset_default_graph()\n",
-    "    net_object = branched_network()\n",
-    "    word_key = np.load('./demo_stim/logits_to_word_key.npy') # load logits to word key\n",
-    "    music_key = np.load('./demo_stim/logits_to_genre_key.npy') # load logits to word key \n",
-    "    \n",
-    "    \n",
-    "    # generate cochleagram, then pass cochleagram through network and get logits for word branch\n",
-    "    \n",
-    "    c_gram = generate_cochleagram(filename)\n",
-    "    logits = net_object.session.run(net_object.word_logits, feed_dict={net_object.x: c_gram})\n",
-    "    prediction = word_key[np.argmax(logits, axis=1)]\n",
-    "    print \"Speech Example ... \\n clean speech, actual label: Cheese, predicted_label: \" \\\n",
-    "        + prediction[0] +'\\n'\n",
-    "    \n",
-    "demo_from_wav('./data/cantonese/cantonese1/also.wav')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +155,50 @@
     "\n",
     "    return c_gram_flatten"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cochleagram.py:133: RuntimeWarning: divide by zero encountered in log10\n",
+      "  freqs_to_plot = np.log10(freqs)\n",
+      "/home/davidlee/dev/kelletal2018/venv/local/lib/python2.7/site-packages/scipy/signal/signaltools.py:2383: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return y[keep]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Speech Example ... \n",
+      " clean speech, actual label: Cheese, predicted_label: __null__\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def demo_from_wav(filename):\n",
+    "    tf.reset_default_graph()\n",
+    "    net_object = branched_network()\n",
+    "    word_key = np.load('./demo_stim/logits_to_word_key.npy') # load logits to word key\n",
+    "    music_key = np.load('./demo_stim/logits_to_genre_key.npy') # load logits to word key \n",
+    "    \n",
+    "    \n",
+    "    # generate cochleagram, then pass cochleagram through network and get logits for word branch\n",
+    "    \n",
+    "    c_gram = generate_cochleagram(filename)\n",
+    "    logits = net_object.session.run(net_object.word_logits, feed_dict={net_object.x: c_gram})\n",
+    "    prediction = word_key[np.argmax(logits, axis=1)]\n",
+    "    print \"Speech Example ... \\n clean speech, actual label: Cheese, predicted_label: \" \\\n",
+    "        + prediction[0] +'\\n'\n",
+    "    \n",
+    "demo_from_wav('../data/cantonese/cantonese1/also.wav')"
+   ]
   }
  ],
  "metadata": {
@@ -201,6 +206,18 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
