--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,6 +169,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "net_object = branched_network()\n",
+    "word_key = np.load('./demo_stim/logits_to_word_key.npy') # load logits to word key\n",
+    "music_key = np.load('./demo_stim/logits_to_genre_key.npy') # load logits to word key \n",
+    "\n",
+    "def generate_cochleagram2(wav_f, sr, title):\n",
+    "    # define parameters\n",
+    "    n, sampling_rate = 50, 16000\n",
+    "    low_lim, hi_lim = 20, 8000\n",
+    "    sample_factor, pad_factor, downsample = 4, 2, 200\n",
+    "    nonlinearity, fft_mode, ret_mode = 'power', 'auto', 'envs'\n",
+    "    strict = True\n",
+    "\n",
+    "    # create cochleagram\n",
+    "    c_gram = cgram.cochleagram(wav_f, sr, n, low_lim, hi_lim, \n",
+    "                               sample_factor, pad_factor, downsample,\n",
+    "                               nonlinearity, fft_mode, ret_mode, strict)\n",
+    "    \n",
+    "    # rescale to [0,255]\n",
+    "    c_gram_rescaled =  255*(1-((np.max(c_gram)-c_gram)/np.ptp(c_gram)))\n",
+    "    \n",
+    "    # reshape to (256,256)\n",
+    "    c_gram_reshape_1 = np.reshape(c_gram_rescaled, (211,400))\n",
+    "    c_gram_reshape_2 = resample(c_gram_reshape_1,(256,256))\n",
+    "    \n",
+    "\n",
+    "    # prepare to run through network -- i.e., flatten it\n",
+    "    c_gram_flatten = np.reshape(c_gram_reshape_2, (1, 256*256)) \n",
+    "    \n",
+    "    return c_gram_flatten\n",
+    "\n",
+    "sr, wav_f = wav.read('/home/davidlee/dev/kelletal2018/data/arabic/arabic1/test123.wav') # corresponds to 'also'\n",
+    "c_gram = generate_cochleagram2(wav_f, sr, 'Example 1')\n",
+    "logits = net_object.session.run(net_object.word_logits, feed_dict={net_object.x: c_gram})\n",
+    "prediction = word_key[np.argmax(logits, axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['over', 'also', 'holding', 'global', 'agreed', 'television', 'near', 'loans', 'head', 'other', 'both', 'women', 'into', 'through', 'back', 'june', 'level', 'just', 'often', 'review', 'thought', 'although', 'young', 'seldom', 'hard', 'build', 'total', 'about', 'remain', 'vote', 'notes', 'must', 'office', 'doing', 'some', 'need', 'proposed', 'gold', 'should', 'almost', 'here', 'more', 'never', 'bill', 'problem', 'levels', 'when', 'well', 'meeting', 'book', 'them', 'movies', 'before', 'these', 'would', 'only', 'away', 'always', 'rule', 'wore', 'huge', 'without', \"don't\", 'whole', 'used', 'ruling', 'enough', 'come', '__null__', '__genre__']\n"
+     ]
+    }
+   ],
+   "source": [
+    "indices = logits[0].argsort()[-70:]\n",
+    "sorted_words = [word_key[i] for i in indices]\n",
+    "print sorted_words"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -190,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,6 +275,16 @@
     "#     prediction = word_key[np.argmax(logits, axis=1)]\n",
     "#     print \"Speech Example ... \\n clean speech, actual label: Cheese, predicted_label: \" \\\n",
     "#         + prediction[0] +'\\n'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c_gram = np.load('./demo_stim/example_cochleagram_0.npy') \n",
+    "logits = network.session.run(network.word_logits, feed_dict={network.x: c_gram})\n",
+    "prediction = word_key[np.argmax(logits, axis=1)]\n",
+    "print prediction"
    ]
   },
   {
